--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.24.7",
+    "@devvie/bottom-sheet": "^0.3.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-bootsplash": "^5.5.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-simple-bottom-sheet": "^1.0.4",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.85",
     "@react-native/eslint-config": "0.74.85",
