--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@devvie/bottom-sheet": "^0.3.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-simple-bottom-sheet": "^1.0.4",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
